src/components/Requests/Request.scss
@import "src/constants/style";

/* fixed wrapper in the top right containing all request */
.requests__wrapper {
  position: fixed;
  top: 110px;
  right: 30px;
  z-index: $request-z-index;
}

/*@media screen and (min-width: 420px) {
  .requests__wrapper {
    left: calc(50% - 200px);
    width: 480px;
  }
}
@media #{$tablet} {
  .requests__wrapper {
    right: 92px;
    left: auto;
    animation: fly-in-right 0.5s ease-out;
  }
}*/

.requests__main {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  row-gap: 15px;

  width: 100%;
  height: auto;
}

[theme="dark"] {
  .requests__main {
    background-color: $color-dark-mode-note;
  }
}

/*@keyframes fly-in-top {
  0% {
    top: -200px;
    opacity: 0;
    visibility: hidden;
  }
  100% {
    top: 60px;
    opacity: 1;
    visibility: visible;
  }
}
@keyframes fly-in-right {
  0% {
    right: -500px;
    opacity: 0;
    visibility: hidden;
  }
  100% {
    right: 92px;
    opacity: 1;
    visibility: visible;
  }
}
*/

